syntax = "proto3";

option go_package = "github.com/umamaheswari76/grpc_demo/blob/main/grpc_demo3/customer";

package customer;

service CustomerService{
    rpc Insert (Customer) returns (InsertCustomerResponse);
    rpc GetTask(Empty) returns (CustomerList);
}

message Customer{

    string customer_name = 1;
    string accountid = 2;
    float balance =3;
    string bankid =4;
    
}

message InsertCustomerResponse{
    string customer_name = 1;
    string accountid = 2;
    float balance =3;
    string bankid =4;
}

message CustomerList{
    repeated Customer customers = 1;
}

message Empty{}